// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно формирует линки в меню легковых на обычной странице 1`] = `
Array [
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,cars"
    url="link/listing/?"
  >
    Легковые
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,trucks"
    url="link/commercial-listing/?category=lcv"
  >
    Коммерческие
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,moto"
    url="link/moto-listing/?category=motorcycle"
  >
    Мото
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,electro"
    metrikaParams="header,electro-link,click"
    url="link/electro/?"
  >
    Электромобили
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,history"
    metrikaParams="header,history-click,title"
    url="link/proauto-landing/?from=shapka"
  >
    ПроАвто
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,credits"
    url="link/my-credits/?"
  >
    Кредиты
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,insurance"
    url="link/osago-promo/?"
  >
    ОСАГО
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,garage"
    url="link/garage/?"
  >
    Гараж
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,mag"
    url="linkMag/mag-index/?utm_content=main_menu&utm_campaign=main_menu"
  >
    Журнал
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,dealers"
    url="link/dealers/?"
  >
    Дилерам
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?section=used"
  >
    С пробегом
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?section=new"
  >
    Новые
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/catalog-index/?"
  >
    Каталог
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/dealers-listing/?section=all"
  >
    Дилеры
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/reviews-index/?"
  >
    Отзывы
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/video/?"
  >
    Видео
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/cars-evaluation/?"
  >
    Оценить автомобиль
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?tag_name=new4new"
  >
    Новинки автопрома
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-allroad"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="ALLROAD"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Внедорожник
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-sedan"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="SEDAN"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Седан
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-hatchback"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="HATCHBACK"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Хэтчбек
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-liftback"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="LIFTBACK"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Лифтбек
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-wagon"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="WAGON"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Универсал
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-minivan"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="MINIVAN"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Минивэн
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-coupe"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="COUPE"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Купе
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-pickup"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="PICKUP"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Пикап
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-cabrio"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="CABRIO"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Кабриолет
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-van"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="VAN"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Фургон
    </div>
  </Link>,
]
`;

exports[`правильно формирует линки в меню легковых на обычной странице с авторизацией под лилером 1`] = `
Array [
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,cars"
    url="link/listing/?"
  >
    Легковые
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,trucks"
    url="link/commercial-listing/?category=lcv"
  >
    Коммерческие
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,moto"
    url="link/moto-listing/?category=motorcycle"
  >
    Мото
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,electro"
    metrikaParams="header,electro-link,click"
    url="link/electro/?"
  >
    Электромобили
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,history"
    metrikaParams="header,history-click,title"
    url="link/proauto-landing/?from=shapka"
  >
    ПроАвто
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,credits"
    url="link/my-credits/?"
  >
    Кредиты
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,insurance"
    url="link/osago-promo/?"
  >
    ОСАГО
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,mag"
    url="linkMag/mag-index/?utm_content=main_menu&utm_campaign=main_menu"
  >
    Журнал
  </Link>,
  <Link
    className="HeaderMainNav__itemLink"
    color="white_with_white_hover"
    metrika="tabs,dealers"
    url="link/dealers/?"
  >
    Дилерам
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?section=used"
  >
    С пробегом
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?section=new"
  >
    Новые
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/catalog-index/?"
  >
    Каталог
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/dealers-listing/?section=all"
  >
    Дилеры
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/reviews-index/?"
  >
    Отзывы
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/video/?"
  >
    Видео
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/cars-evaluation/?"
  >
    Оценить автомобиль
  </Link>,
  <Link
    className="HeaderMainNav__sideNavLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?tag_name=new4new"
  >
    Новинки автопрома
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-allroad"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="ALLROAD"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Внедорожник
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-sedan"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="SEDAN"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Седан
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-hatchback"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="HATCHBACK"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Хэтчбек
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-liftback"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="LIFTBACK"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Лифтбек
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-wagon"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="WAGON"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Универсал
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-minivan"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="MINIVAN"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Минивэн
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-coupe"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="COUPE"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Купе
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-pickup"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="PICKUP"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Пикап
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-cabrio"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="CABRIO"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Кабриолет
    </div>
  </Link>,
  <Link
    className="HeaderMainNav__subLink"
    color="black"
    onClick={[Function]}
    url="link/listing/?body_type_sef=body-van"
  >
    <CategorySubTypeImage
      className="HeaderMainNav__subLinkImage"
      type="VAN"
    />
    <div
      className="HeaderMainNav__subLinkText"
    >
      Фургон
    </div>
  </Link>,
]
`;
